--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -548,7 +548,7 @@
         <!--Sign in-->
         <scene sceneID="CS4-eT-qCF">
             <objects>
-                <viewController id="6pJ-gX-ydc" sceneMemberID="viewController">
+                <viewController id="6pJ-gX-ydc" customClass="SignInViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="x2u-lA-UMB"/>
                         <viewControllerLayoutGuide type="bottom" id="bhI-xk-BmZ"/>
@@ -560,14 +560,9 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Pocket ID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0OG-27-6Mp">
                                 <rect key="frame" x="16" y="95" width="115" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="sH9-MD-zXP"/>
+                                    <constraint firstAttribute="height" constant="21" id="Hfg-EQ-eyW"/>
+                                    <constraint firstAttribute="width" constant="115" id="K3s-UR-CMy"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ey2-vc-UK0">
-                                <rect key="frame" x="16" y="133" width="115" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -580,34 +575,63 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KyK-Xe-daZ">
                                 <rect key="frame" x="139" y="129" width="445" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="keJ-ux-FEG">
                                 <rect key="frame" x="269" y="167" width="63" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="63" id="B6h-11-qNw"/>
+                                    <constraint firstAttribute="width" constant="63" id="9rp-lv-iGB"/>
                                 </constraints>
                                 <state key="normal" title="Sign in">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="touchUpInsideSignInButton:" destination="6pJ-gX-ydc" eventType="touchUpInside" id="Bqt-kG-vMj"/>
+                                </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBc-pR-Vue">
+                                <rect key="frame" x="268" y="167" width="65" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="ENR-IW-Fak"/>
+                                </constraints>
+                                <state key="normal" title="Sign out">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchUpInsideSignOutButton:" destination="6pJ-gX-ydc" eventType="touchUpInside" id="j7Z-qo-cRm"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ey2-vc-UK0">
+                                <rect key="frame" x="16" y="133" width="115" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KKw-ga-vAn" firstAttribute="trailing" secondItem="dlj-lj-5AR" secondAttribute="trailingMargin" id="0Ci-j6-jP0"/>
-                            <constraint firstItem="KKw-ga-vAn" firstAttribute="top" secondItem="x2u-lA-UMB" secondAttribute="bottom" constant="27" id="4RW-kX-vMl"/>
-                            <constraint firstItem="keJ-ux-FEG" firstAttribute="top" secondItem="KyK-Xe-daZ" secondAttribute="bottom" constant="8" symbolic="YES" id="EAx-0x-h48"/>
-                            <constraint firstItem="ey2-vc-UK0" firstAttribute="top" secondItem="0OG-27-6Mp" secondAttribute="bottom" constant="17" id="JP8-u3-y4L"/>
-                            <constraint firstItem="keJ-ux-FEG" firstAttribute="centerX" secondItem="dlj-lj-5AR" secondAttribute="centerX" id="OFi-v0-gQf"/>
-                            <constraint firstItem="ey2-vc-UK0" firstAttribute="leading" secondItem="dlj-lj-5AR" secondAttribute="leadingMargin" id="Pxo-2C-HM1"/>
-                            <constraint firstItem="0OG-27-6Mp" firstAttribute="top" secondItem="x2u-lA-UMB" secondAttribute="bottom" constant="31" id="QYU-e6-Vlo"/>
-                            <constraint firstItem="0OG-27-6Mp" firstAttribute="leading" secondItem="ey2-vc-UK0" secondAttribute="leading" id="Xcm-uD-UVH"/>
-                            <constraint firstItem="KKw-ga-vAn" firstAttribute="leading" secondItem="0OG-27-6Mp" secondAttribute="trailing" constant="8" symbolic="YES" id="h9M-uT-ZcI"/>
-                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="top" secondItem="KKw-ga-vAn" secondAttribute="bottom" constant="8" symbolic="YES" id="pI5-fe-pey"/>
-                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="trailing" secondItem="KKw-ga-vAn" secondAttribute="trailing" id="pbF-rs-5n9"/>
-                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="leading" secondItem="ey2-vc-UK0" secondAttribute="trailing" constant="8" symbolic="YES" id="sJ2-6h-qnR"/>
-                            <constraint firstItem="KKw-ga-vAn" firstAttribute="leading" secondItem="KyK-Xe-daZ" secondAttribute="leading" id="vDQ-Jg-KHc"/>
+                            <constraint firstItem="ey2-vc-UK0" firstAttribute="top" secondItem="0OG-27-6Mp" secondAttribute="bottom" constant="17" id="1Ix-6Q-fQi"/>
+                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="leading" secondItem="KKw-ga-vAn" secondAttribute="leading" id="DA6-6O-wY3"/>
+                            <constraint firstItem="0OG-27-6Mp" firstAttribute="top" secondItem="x2u-lA-UMB" secondAttribute="bottom" constant="31" id="KV1-5h-lbn"/>
+                            <constraint firstItem="hBc-pR-Vue" firstAttribute="top" secondItem="KyK-Xe-daZ" secondAttribute="bottom" constant="8" symbolic="YES" id="Kk9-6j-JO7"/>
+                            <constraint firstItem="hBc-pR-Vue" firstAttribute="centerX" secondItem="keJ-ux-FEG" secondAttribute="centerX" id="Luu-89-Acs"/>
+                            <constraint firstItem="hBc-pR-Vue" firstAttribute="centerX" secondItem="dlj-lj-5AR" secondAttribute="centerX" id="OSJ-Rc-ytf"/>
+                            <constraint firstItem="KKw-ga-vAn" firstAttribute="top" secondItem="x2u-lA-UMB" secondAttribute="bottom" constant="27" id="UKE-zf-BLM"/>
+                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="top" secondItem="KKw-ga-vAn" secondAttribute="bottom" constant="8" symbolic="YES" id="a6N-KX-zdh"/>
+                            <constraint firstItem="KKw-ga-vAn" firstAttribute="leading" secondItem="0OG-27-6Mp" secondAttribute="trailing" constant="8" symbolic="YES" id="bqJ-C2-9Bc"/>
+                            <constraint firstItem="ey2-vc-UK0" firstAttribute="leading" secondItem="dlj-lj-5AR" secondAttribute="leadingMargin" id="dgI-i4-b7l"/>
+                            <constraint firstItem="KKw-ga-vAn" firstAttribute="trailing" secondItem="KyK-Xe-daZ" secondAttribute="trailing" id="eIU-nr-D4z"/>
+                            <constraint firstItem="ey2-vc-UK0" firstAttribute="leading" secondItem="0OG-27-6Mp" secondAttribute="leading" id="ijF-a2-epd"/>
+                            <constraint firstItem="keJ-ux-FEG" firstAttribute="baseline" secondItem="hBc-pR-Vue" secondAttribute="baseline" id="l4y-ZI-BLC"/>
+                            <constraint firstItem="bhI-xk-BmZ" firstAttribute="top" secondItem="ey2-vc-UK0" secondAttribute="bottom" constant="397" id="uw8-Zr-rEd"/>
+                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="leading" secondItem="ey2-vc-UK0" secondAttribute="trailing" constant="8" symbolic="YES" id="vd9-g9-qoD"/>
+                            <constraint firstItem="KyK-Xe-daZ" firstAttribute="trailing" secondItem="dlj-lj-5AR" secondAttribute="trailingMargin" id="xfU-aq-q78"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="uw8-Zr-rEd"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Sign in" id="Uuw-fC-FFw">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="p7e-UV-sc2">
@@ -616,6 +640,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="myPocketIDTextField" destination="KKw-ga-vAn" id="lAM-PM-ZFl"/>
+                        <outlet property="passwordTextField" destination="KyK-Xe-daZ" id="x3Y-se-GUx"/>
+                        <outlet property="signInButton" destination="keJ-ux-FEG" id="DSD-AJ-LeA"/>
+                        <outlet property="signOutButton" destination="hBc-pR-Vue" id="vbN-Bh-6wl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vO4-Ph-Sq4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -656,12 +686,12 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Mf-1z-iaB">
                                 <rect key="frame" x="139" y="72" width="445" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet"/>
                                 <connections>
                                     <outlet property="delegate" destination="KB4-ES-V0z" id="SDw-J3-BVb"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fx-y2-qfp">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fx-y2-qfp">
                                 <rect key="frame" x="16" y="152" width="115" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -670,14 +700,14 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lIa-2b-q0w">
                                 <rect key="frame" x="139" y="148" width="445" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xzF-r8-Vic">
                                 <rect key="frame" x="139" y="186" width="445" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password(Re:)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95w-PU-9fe">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Password(Re:)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95w-PU-9fe">
                                 <rect key="frame" x="16" y="190" width="115" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
