--- a/MyPocketSBUX/app/views/tasting_logs/_form.html.erb
+++ b/MyPocketSBUX/app/views/tasting_logs/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :order_id %><br>
     <%= f.text_field :order_id %>
   </div>
+  <div class="field">
+    <%= f.label :my_pocket_id %><br>
+    <%= f.text_field :my_pocket_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
