--- a/MyPocketSBUX/app/views/orders/_form.html.erb
+++ b/MyPocketSBUX/app/views/orders/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :notes %><br>
     <%= f.text_field :notes %>
   </div>
+  <div class="field">
+    <%= f.label :my_pocket_id %><br>
+    <%= f.text_field :my_pocket_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
